# kafka-rust

./: .clippy.toml  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENCE-MIT  LICENSE  LICENSE-APACHE  README.md
.github/: dependabot.yml
.github/workflows/: bench.yml  rust.yml
benches/: partitioner.rs  producer_throughput.rs  protocol_serialization.rs
crates/rustfs-kafka/: Agent.md  Cargo.toml
crates/rustfs-kafka-async/: Agent.md  Cargo.toml  README.md
crates/rustfs-kafka-async/src/: client.rs  connection.rs  consumer.rs  lib.rs  metrics.rs  producer.rs
crates/rustfs-kafka-async/tests/: sasl_secure_integration.rs
crates/rustfs-kafka/examples/: console-producer.rs  example-consume.rs  example-fetch.rs  example-produce.rs
crates/rustfs-kafka/src/: error.rs  lib.rs  metrics.rs  utils.rs
crates/rustfs-kafka/src/client/: builder.rs  config.rs  fetch_ops.rs  metadata.rs  metadata_ops.rs  mod.rs  offset_ops.rs  produce_ops.rs  state.rs  transport.rs
crates/rustfs-kafka/src/compression/: mod.rs
crates/rustfs-kafka/src/consumer/: assignment.rs  builder.rs  group_coordinator.rs  mod.rs  rebalance.rs
crates/rustfs-kafka/src/network/: connection.rs  mod.rs  pool.rs
crates/rustfs-kafka/src/producer/: batch.rs  builder.rs  mod.rs  record.rs
crates/rustfs-kafka/src/producer/partitioner/: default.rs  mod.rs  round_robin.rs  sticky.rs  uniform.rs
crates/rustfs-kafka/src/protocol/: api_versions.rs  consumer.rs  create_topics.rs  delete_topics.rs  fetch.rs  group.rs  init_producer_id.rs  metadata.rs  mod.rs  produce.rs  transaction.rs
crates/rustfs-kafka/src/tls/: mod.rs  rustls_connector.rs
crates/rustfs-kafka/tests/: .env  do_until_success  docker-compose.yml  run-all-tests  run-async-secure-tests  run-sync-secure-tests  test_kafka.rs
crates/rustfs-kafka/tests/integration/client/: mod.rs
crates/rustfs-kafka/tests/integration/consumer_producer/: consumer.rs  mod.rs  producer.rs
crates/rustfs-kafka/tests/kafka-rust-image/: Dockerfile  LICENSE  create-topics.sh  kraft-sasl-secure-server.properties  kraft-secure-server.properties  kraft-server.properties  sasl-secure.server.properties  secure.server.properties  server.properties  start-kafka.sh
docs/: README.md  api-guide.md  usage-guide.md
examples/: console-consumer.rs  console-producer.rs  example-consume.rs  example-fetch.rs  example-produce.rs  example-rustls.rs  example-ssl.rs  example-topic-admin.rs  offset-monitor.rs  topic-metadata.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compression.rs  fuzz_error.rs  fuzz_record.rs
src/: codecs.rs  error.rs  lib.rs  metrics.rs  producer.rs  utils.rs
src/client/: builder.rs  config.rs  fetch_ops.rs  internals.rs  metadata.rs  metadata_ops.rs  mod.rs  network.rs  offset_ops.rs  produce_ops.rs  state.rs  transport.rs
src/compression/: gzip.rs  lz4.rs  lz4_native.rs  mod.rs  snappy.rs  zstd.rs
src/consumer/: assignor.rs  builder.rs  group_coordinator.rs  mod.rs  rebalance.rs  state.rs
src/network/: connection.rs  mod.rs  pool.rs
src/producer/: batch.rs  builder.rs  config.rs  mod.rs  partitioner.rs  record.rs  transaction.rs
src/producer/partitioner/: default.rs  round_robin.rs  sticky.rs  uniform.rs
src/protocol/: api_versions.rs  consumer.rs  create_topics.rs  delete_topics.rs  fetch.rs  group.rs  init_producer_id.rs  list_offset.rs  metadata.rs  mod.rs  offset.rs  produce.rs  transaction.rs
src/protocol2/: api_versions.rs  consumer.rs  fetch.rs  metadata.rs  mod.rs  offset.rs  produce.rs
src/tls/: mod.rs  openssl_connector.rs  rustls_connector.rs
tests/: docker-compose.yml  run-all-tests  test_kafka.rs
tests/integration/client/: mod.rs
tests/integration/consumer_producer/: consumer.rs  mod.rs  producer.rs
tests/kafka-rust-image/: Dockerfile  kraft-secure-server.properties
