[package]
name = "rustfs-kafka"
version = "0.21.0"
authors = ["houseme", "houseme <husemecn@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/rustfs-kafka/"
edition = "2024"
keywords = ["kafka", "queue"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseme/kafka-rust"
description = "Rust client for Apache Kafka"
rust-version = "1.93.0"

[dependencies]
byteorder = "1.5"
fnv = "1.0.7"
twox-hash = "2.1.2"
bytes = "1.10"
kafka-protocol = { version = "0.17", default-features = false, features = ["client"] }
indexmap = "2"

flate2 = { version = "1.1.9", optional = true }
snap = { version = "1.1.1", optional = true }
lz4_flex = { version = "0.11", optional = true, default-features = false, features = ["frame", "std"] }
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", optional = true }
chrono = { version = "0.4.44", optional = true }
thiserror = "2.0.18"
tracing = "0.1.44"

# rustls TLS backend (pure Rust)
rustls = { version = "0.23.38", optional = true, default-features = false, features = ["logging", "prefer-post-quantum", "std", "tls12"] }
webpki-roots = { version = "1.0.7", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true, features = ["std"] }
rustls-native-certs = { version = "0.8.3", optional = true }

[dev-dependencies]
getopts = "0.2.24"
tracing-subscriber = "0.3.23"
rand = "0.10.1"
anyhow = "1.0.102"

[features]
default = ["snappy", "gzip", "lz4", "security"]
snappy = ["snap"]
gzip = ["flate2"]
lz4 = ["lz4_flex"]
lz4_native = ["dep:lz4"]
zstd = ["dep:zstd"]

# TLS/Security features (rustls, default crypto: aws-lc-rs)
security = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pki-types", "dep:rustls-native-certs", "rustls/aws-lc-rs"]
security-ring = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pki-types", "dep:rustls-native-certs", "rustls/ring"]

producer_timestamp = ["chrono"]
nightly = []
integration_tests = []