[workspace]
members = [
    "crates/rustfs-kafka",
    "crates/rustfs-kafka-async",
]
resolver = "3"

[workspace.package]
version = "0.22.0"
authors = ["houseme", "houseme <houseme <husemecn@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/rustfs-kafka/"
edition = "2024"
keywords = ["kafka", "queue"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseme/kafka-rust"
description = "Rust client for Apache Kafka"
rust-version = "1.93.0"

[workspace.dependencies]
# Core dependencies
socket2 = "0.6"
fnv = "1"
twox-hash = { version = "2", default-features = false, features = ["xxhash32", "std"] }
bytes = "1"
kafka-protocol = { version = "0.17", default-features = false, features = ["client"] }
indexmap = "2"
thiserror = "2"
tracing = "0.1"

# Optional dependencies (made optional in consuming crates via dep: syntax)
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
webpki-roots = "1"
rustls-native-certs = "0.8"

# Optional: metrics
metrics = "0.24"

# Async runtime
tokio = "1"

# Dev dependencies
ctor = "0.4"
getopts = "0.2"
tracing-subscriber = "0.3"
rand = "0.10"
anyhow = "1"
proptest = "1"
criterion = { version = "0.6", features = ["html_reports"] }
