[package]
name = "rustfs-kafka-async"
version = "0.1.0"
authors.workspace = true
categories = ["api-bindings", "asynchronous"]
edition.workspace = true
keywords = ["kafka", "queue", "async", "tokio"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
description = "Async Kafka client built on tokio"
rust-version.workspace = true

[dependencies]
rustfs-kafka = { path = "../rustfs-kafka" }
tokio = { workspace = true, features = ["net", "io-util", "time", "sync", "rt", "macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
