[package]
name = "rustfs-kafka-async"
version.workspace = true
authors.workspace = true
categories = ["api-bindings", "asynchronous"]
edition.workspace = true
keywords = ["kafka", "queue", "async", "tokio"]
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Async Kafka client built on tokio"
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rustfs-kafka = { workspace = true }
bytes.workspace = true
kafka-protocol.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "time", "sync", "rt", "macros", "fs"] }
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rustls-native-certs.workspace = true
tracing.workspace = true
metrics = { workspace = true, optional = true }
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
pbkdf2.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
ctor.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:metrics", "rustfs-kafka/metrics"]
integration_tests = []
